# pressure-wounds-identifier

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
src/Sore-Detection/classes/: __init__.py  data.py
src/Sore-Detection/functions/: __init__.py  inference.py  post_process.py
src/Sore-Detection/usage/: color_classification_usage.py  inference_usage.py  train_usage.py
src/sore_detection/classes/: transformations.py
src/sore_detection/functions/: color_classification.py  inference.py  nn.py  post_process.py
src/sore_detection/usage/: color_classification_usage.py  inference_usage.py  train_usage.py
