[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sore-detection"
version = "0.1.0"
description = "Detect and classify pressure wounds using image processing and deep learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.1",
    "pandas>=2.2",
    "matplotlib>=3.10",
    "scikit-learn>=1.6",
    "scikit-image>=0.25",
    "scipy>=1.15",
    "opencv-python>=4.11",
    "torch>=2.6",            # Will install CPU version by default
    "torchvision>=0.21",
    "torchaudio>=2.6",
    "timm>=1.0",
    "efficientnet_pytorch>=0.7",
    "segmentation_models_pytorch>=0.4",
    "requests>=2.32",
    "PyYAML>=6.0",
    "imageio>=2.37",
    "joblib>=1.4",
    "pretrainedmodels>=0.7",
    "openpyxl>=3.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
train-model = "sore_detection.usage.train_usage:main"
run-inference = "sore_detection.usage.inference_usage:main"
classify-colors = "sore_detection.usage.color_classification_usage:main"

